<resources>
    <string name="app_name">Ex3</string>
    <string name="action_settings">Settings</string>
    <string name="sheep_order_form">Sheep order form</string>
    <string name="sheep_order_user_instruction">Please select num of sheeps</string>
    <string name="with_food">With food</string>
    <string name="make_order">Make order</string>
    <string name="seekBar_max">1000</string>
    <string name="title_activity_order_sent">OrderSent</string>
    <string name="order_sent">Your order has been sent!</string>
    <string name="selectButton">Select</string>
    <string name="appbar_item_send_order">Send Order</string>
    <string name="title_activity_select_food">Select Food</string>

    <string-array name="food_array">
        <item>Hay</item>
        <item>Soybean</item>
        <item>Silage</item>
        <item>Grass</item>
        <item>Wheat Grain</item>
    </string-array>

    <string name="SELECT_FOOD_REQUEST">15</string>
</resources>
