<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_ex1"
    tools:context="com.nadavh.ex1.Ex1">

    <TextView
        android:text="@string/sheep_order_form"
        android:textSize="@dimen/main_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/order_form_text_margin"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:text="@string/sheep_order_user_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/num_of_sheep_editText" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="@string/seekBar_max"
        android:id="@+id/num_of_sheep_seekBar" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/with_food"
        android:id="@+id/with_food_checkBox" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_order"
        android:onClick="sendToast"
        android:enabled="true"
        android:id="@+id/make_order_button" />


</LinearLayout>
